Fix Spacing on Mobile

--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -192,8 +192,8 @@
     border-top: 0;
     border-bottom: 1px solid $color-black;
     padding-top: .9331rem;
-    padding-right: 1.6875rem;
-    padding-left: 1.6875rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
   }
 
 
